consertando erros no modal de links

--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -125,7 +125,7 @@
       {# opções de cancelar e editar no modo de edição #}
       <div class="form-group editation editation_{{topic.slug}}">
         <div class="col-md-10">
-          <a href="javascript:show_presentation('{{topic.slug}}')" class="btn btn-raise btn-default">{% trans 'Back' %}</a>
+          <a href="javascript:show_presentation('{{topic.slug}}')" class="btn btn-raised btn-default">{% trans 'Back' %}</a>
           {# <a href="javascript:show_presentation('{{topic.slug}}')" class="btn btn-raised btn-primary">{% trans 'Submit' %}</a>#}
         </div>
       </div>
