--- a/links/templates/links/delete_link.html
+++ b/links/templates/links/delete_link.html
@@ -40,6 +40,7 @@
     <script type="text/javascript">
       $("#form-delete-link").submit(function(event) {
             var data = new FormData($('#form-delete-link').get(0));
+            $('#linkDeleteModal').modal('hide');
             $.ajax({
                 url: "{% url 'course:links:delete_link' link.slug %}",
                 type: $("#form-delete-link").attr('method'),
@@ -48,16 +49,17 @@
                 processData: false,
                 contentType: false,
                 success: function(data) {
-                    $('#linkDeleteModal').modal('hide');
+                    $('#requisicoes_ajax').empty();
                     $('#link_{{ link.slug }}').remove();
                     $('#link_edit_icon_{{ link.slug }}').remove();
                     $('#link_edit_{{ link.slug }}').remove();
                     alertify.alert('Link successfully deleted!')
                 },
                 error: function(data){
-                    // $('.erro-update').html(data.responseText);
-                    $('.modal-backdrop').remove();
-                    $('#linkDeteleModal').modal();
+                    $("div.modal-backdrop.fade.in").remove();
+                    $('#requisicoes_ajax').empty();
+                    $('#requisicoes_ajax').append(data.responseText);
+                    $('#linkDeleteModal').modal('show');
                     alertify.alert('Error when trying to delete.');
                 }
             });
