--- a/exam/templates/exam/multiple_choice_question.html
+++ b/exam/templates/exam/multiple_choice_question.html
@@ -31,7 +31,7 @@
 <!-- new alternative button -->
 <div class="form-group">
   <div class="col-md-12 col-md-offset-2">
-  <button type="button" class="btn btn-primary" id="newAlternative">{% trans 'New Alternative' %]</button>
+  <button type="button" class="btn btn-primary" id="newAlternative">{% trans 'New Alternative' %}</button>
   </div>
 </div>
 <div class="form-group">
