--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -54,6 +54,12 @@
 	{% endblock %}
 	{% block javascript %}
 	{% endblock %}
+
+	<!-- Summernote -->
+	<script src="http://podivej.se/js/summernote.min.js" type="text/javascript"></script>
+	<link href="http://podivej.se/css/summernote.css" type="text/css" rel="stylesheet" />
+	<link href="http://podivej.se/css/summernote-bs3.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
 	{% block nav %}
