--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -25,6 +25,8 @@
             <li><a href="javascript:show_editation('{{topic.slug}}')"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
             <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeTopic"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
           </ul>
+
+
           {% endif %}
         </div>
       </div>
@@ -49,7 +51,7 @@
       </div>
       <div class="form-group editation editation_{{topic.slug}}">
         <label class="control-label" for="focusedInput2">{% trans 'Description' %}</label>
-        <textarea class="form-control" rows="3" id="textArea">{{topic.description}}</textarea>
+        <textarea class="form-control" rows="3" id="summernote">{{topic.description}}</textarea>
       </div>
 
       {# materiais do topico#}
@@ -207,3 +209,5 @@
   </div>
 </div>
 <!-- EndModal -->
+
+
