--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -72,20 +72,24 @@
            		</button>
            		<a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo"/></a>
          		</div>
-         		<div class="navbar-collapse collapse navbar-responsive-collapse">
+						<div class="navbar-collapse collapse navbar-responsive-collapse">
 							<div class="col-md-5 cards-content" id= 'NavBarSearch'>
 								<form id="SearchForm" action="{% url 'users:search' %}" method="get" accept-charset="utf-8">
 										<div class="input-group">
 											<div class="form-group is-empty" >
-											<input type="text" class="form-control" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search"></div>
+													 <input type="text" class="form-control" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search">
+											</div>
 												<span class="input-group-btn input-group-sm">
-													<button type="submit" class="btn btn-fab btn-fab-mini">
-														<i class="fa fa-search" aria-hidden="true" style="color:#93C741"></i>
+													<button type="submit" class="btn btn-primary" id="btn-search">
+														<i class="fa fa-search fa-2x" aria-hidden="true" style="color:#93C741"></i>
 													</button>
-												</span>
+                        </span>
+
+
 										</div>
 								</form>
 						</div>
+
            		<ul class="nav navbar-nav navbar-right notifications">
              			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
                  <a  class="dropdown-toggle" data-toggle="dropdown"> <span id="notification-count" class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell" aria-hidden="true"></i></a>
