button css included [Issue:#251]

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -22,6 +22,9 @@
     position: absolute;
     left: 30%;
   }
+#btn-search{
+      margin-bottom: 0px;
+  }
 .user-notification-img{
   width:40%;
 }
